# Gruff

./: .gitignore  README.md
docs/: _config.yml  final.md  index.md  proposal.md  status.md  team.md
src/: README.md  requirements.txt  train_a2c.py
src/a2c/: dataset.py  env.py  models.py  torch_a2c.ipynb  train_a2c.py
src/adversarial/: torch_adversarial.ipynb  train_adversarial.py
src/c_bridge/: CMakeLists.txt  bridgev2.cc  bridgev2.h  bridgev2_uncontested_bidding.h
src/python/: BridgeDataModule.py  BridgeNetwork.py  README.md  Untitled.ipynb  test_supervised_learning.py  torch_RL.ipynb  torch_a2c.ipynb  torch_adversarial.ipynb  train_supervised.py
src/samples/: torch_RL.ipynb
src/supervised/: BridgeDataModule.py  BridgeNetwork.py  README.md  Scratch.ipynb  eval_supervised.ipynb  test_supervised.py  train_base.py  train_supervised.py
